# hello-julia

./: .buildinfo  conditionals.html  data_structures.html  functions.html  genindex.html  hellojulia.html  hellojulia.jl  intro.html  loops.html  objects.inv  pyproject.toml  requirements.ipynb  search.html  searchindex.js
_sources/: data_structures.ipynb  hellojulia.ipynb  loops.ipynb
mybook/: _config.yml  _toc.yml  conditionals.ipynb  data_structures.ipynb  functions.ipynb  loops.ipynb  plotting.ipynb
mybook/_build/.doctrees/: conditionals.doctree  data_structures.doctree  environment.pickle  functions.doctree  hellojulia.doctree  intro.doctree  loops.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
mybook/_build/html/: .buildinfo  conditionals.html  data_structures.html  functions.html  genindex.html  hellojulia.html  intro.html  loops.html  objects.inv  search.html  searchindex.js
mybook/_build/html/_sources/: functions.ipynb  hellojulia.ipynb  intro.md
mybook/_build/jupyter_execute/: conditionals.ipynb  data_structures.ipynb  functions.ipynb  hellojulia.ipynb  loops.ipynb  markdown-notebooks.ipynb
