[project]
name = "hello-julia"
version = "0.1.0"
description = ""
authors = [
    {name = "kat",email = "tikvina.kat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ghp-import (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter-book = "^1.0.4.post1"

